@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_version.c,v 1.3 1999/07/28 07:49:37 tomh Exp $
+ *   $Id: m_operwall.c,v 1.1 1999/07/30 04:01:32 tomh Exp $
  */
 #include "m_commands.h"
 #include "client.h"
@@ -117,13 +117,16 @@ int m_operwall(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
     }
 
 #ifdef PACE_WALLOPS
-  if( MyClient(sptr) && ((LastUsedWallops + WALLOPS_WAIT) > CurrentTime) )
+  if( MyClient(sptr) )
     {
-      sendto_one(sptr, ":%s NOTICE %s :Oh, one of those annoying opers who doesn't know how to use a channel",
-                 me.name,parv[0]); 
-      return 0;
-    }
-  LastUsedWallops = CurrentTime;
+          if( (LastUsedWallops + WALLOPS_WAIT) > CurrentTime ) 
+            {
+                sendto_one(sptr, ":%s NOTICE %s :Oh, one of those annoying opers who doesn't know how to use a channel",
+                     me.name,parv[0]);
+                return 0;
+            }
+          LastUsedWallops = CurrentTime;
+     }
 #endif
 
   sendto_serv_butone(IsServer(cptr) ? cptr : NULL, ":%s OPERWALL :%s",
