@@ -17,7 +17,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: s_bsd.c,v 1.112 1999/08/01 18:13:42 tomh Exp $
+ *  $Id: s_bsd.c,v 1.113 1999/08/01 19:31:56 tomh Exp $
  */
 #include "s_bsd.h"
 #include "class.h"
@@ -347,7 +347,6 @@ int deliver_it(aClient *cptr, char *str, int len)
  */
 int check_client(struct Client *cptr,char *username,char **reason)
 {
-  static char     sockname[HOSTLEN + 1];
   int             i;
   struct hostent* hp = 0;
  
@@ -356,9 +355,9 @@ int check_client(struct Client *cptr,char *username,char **reason)
   if (cptr->dns_reply)
     hp = cptr->dns_reply->hp;
 
-  if ((i = attach_Iline(cptr, hp, sockname, username, reason)))
+  if ((i = attach_Iline(cptr, hp, username, reason)))
     {
-      log(L_INFO, "Access denied: %s[%s]", cptr->name, sockname);
+      log(L_INFO, "Access denied: %s[%s]", cptr->name, cptr->sockhost);
       return i;
     }
 
